Added Readme file for sql section. Added script for creating MySQL user. Added SQL dump for Asterisk configuration tables. Updating the sample MySQL configuration file. Updating the odbc.ini file. Updating the vsFTPd configuration file.

--- a/asterisk/base_cfg/etc/my.cnf
+++ b/asterisk/base_cfg/etc/my.cnf
@@ -5,6 +5,7 @@
 #
 # 15-May-2011
 #
+# Note: You *should* modify this file before you try to use it, as every system is not the same
 
 ##### The following options will be passed to all MySQL clients #####
 [client]
