--- a/asterisk/base_cfg/etc/vsftpd.conf
+++ b/asterisk/base_cfg/etc/vsftpd.conf
@@ -2,7 +2,9 @@
 #
 # @autor Jose P. Espinal, jpe@slackware-es.com
 #
-# 
+# Note: Do not forget to create the /etc/vsftpd.chroot_list file.
+#       use 'touch /etc/vsftpd.chroot_list' if you are not planning to include any user there
+#
 anonymous_enable=NO
 local_enable=YES
 write_enable=YES
@@ -21,7 +23,7 @@ async_abor_enable=YES
 #ascii_upload_enable=YES
 #ascii_download_enable=YES
 #
-ftpd_banner=
+ftpd_banner=Asterisk-PBX
 #
 #
 chroot_list_enable=YES
