Updating MySQL configuration file (setting utf8 as default charset). Updating SQL dump file.

--- a/asterisk/base_cfg/etc/my.cnf
+++ b/asterisk/base_cfg/etc/my.cnf
@@ -29,6 +29,9 @@ query_cache_size	= 32M
 # Try number of CPU's*2 for thread_concurrency
 thread_concurrency	= 8
 expire_logs_days	= 3
+skip-character-set-client-handshake
+collation_server=utf8_unicode_ci
+character_set_server=utf8
 
 # Don't listen on a TCP/IP port at all. This can be a security enhancement,
 # if all processes that need to connect to mysqld run on the same host.
